# SE25

./: .gitignore  Configuration_Management_Plan.md  README.md  READMEStructure.md  READMEStrucure.md  WinOnUbuntu.md
deliverables/: Requirements in UML Models.md  SRSv1.md  UML Tool Evaluation Report — SE25.md
doc/: CodeStyleGuide_SE25_0.0_2025-11-08.md  Methodology.md  README.md  SDD.md
doc/deliverable/: DemosGuide.md  DemosGuide_SE25_0.0_2025-12-07.md  SDD_SE25_0.0_2025-11-XX.md  SRS_SE25_0.0_2025-11-XX.md  Software_Enhancement_Overview_2025_12_XX.md  UMLToolEvaluationReport_SE25_V1.0_2025-10-XX.md  prueba_SE25_v01_2025-11-14.md
doc/guide/: ChangesManagementPlan_SE25_0.0_2025-11-08.md  CodeStyleGuide_SE25_0.0_2025-11-08.md  ConfigurationManagementPlan_SE25_0.0_2025-11-08.md  InverseEngineering_SE25_23-11-2025.md  Inverse_Engineering.md  Reverse_Model_2025_11_30.md  Simulation6DOFRobotArm_SE25_v1.0_2025-11-01.md  SimulationRobotRViz_SE25_v1.0_2025-11-01.md  SystemManual_SE25_V1.0_13-12-2026.md  UserManual_SE25_V1.0_12-12-2026.md  WinOnUbuntu_SE25_V1.0_2025-11-01.md
doc/tests/: README.md  TestReport_SE25_v1.0_15-12-2025.md  Test_Report_SE25.md  automated_test.py  test_bailarin.cpp  (+1 more)
docs/: README.md
models/: PROC_SE25_00_2025-11-08  README.md
robot_initial/: README.md
ros2_robot_ws/: READ_ME_ini_sim.md
src/: README.md
src/ros2_control_demo_example_7/: CMakeLists.txt
src/ros2_control_demo_example_7/src/: path_manager.cpp  path_manager.hpp  robot_bailarin.cpp
src/ros2_control_demo_example_7/test/: test_bailarin.cpp  test_path_manager.cpp
(+296 files in other folders)
